2003-03-03  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* syntax.c (subst_defines): New function to substitute defines.
	(this_try_alloc_color_pair): Move color substitution ...
	(edit_read_syntax_rules): ... here.  Use subst_defines() to
	substitute colors for contexts and keywords.  Allow multiword
	defines.

2003-02-26  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* syntax.c (edit_read_syntax_rules): Add args argument and use
	it instead of own auto args array to share this area with ...
	(edit_read_syntax_file): ... this.  Adjust for the above.
	Use strncpy() instead of unsafe strcpy().

2003-02-25  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* syntax.c (defines): New static variable for list of defines.
	(mc_defines_destroy): New function to release memory of key
	pair.
	(destroy_defines): New function to destroy list of defines
	completely.
	(this_try_alloc_color_pair): Use strncpy() instead of unsafe
	strcpy().  Use values from list of defines to substitute given
	parameters.
	(edit_read_syntax_rules): Initialize list of defines and process
	new "define" keyword.  Use strncpy() instead of unsafe strcpy().
	(edit_free_syntax_rules): Destroy list of defines.

2003-02-21  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* editmenu.c (OptMenuEmacs): Define as OptMenu.
	(SearReplMenuEmacs): Define as SearReplMenu.
	(EditMenuEmacs): Define as EditMenu.

2002-12-28  Pavel Roskin  <proski@gnu.org>

	* editmenu.c (OptMenu): Add "Learn Keys".
	(OptMenuEmacs): Likewise.

2003-01-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* edit-widget.h (struct macro): Move definition ...
	* edit.h: ... here to fix compilation on HP-UX.

2002-12-25  Pavel Roskin  <proski@gnu.org>

	* editkeys.c: Move key maps to the file scope.  Put common keys
	to a separate table common_key_map.
	(edit_translate_key): Remove unused argument x_keycode.

	* editkeys.c (edit_translate_key): Treat Shift-Enter as return
	without indent.  Useful when pasting multiline text with
	Shift-button3 or Shift-Insert with autoindent enabled.
